
Enhancements:
* Increased Deep Mob Learning Shulker power requirement
* Added Shulker Pearls and Glowing Chorus to the Shulker Deep Mob Learning drops
* Removed Cyclic's Glowing Chrous recipe
* Add melting recipes for pink slime
* Add chorus flower to the drops of the chorus fruit plant - making them obtainable in CompactSky (#750)


---------------------------------------------------------------------

4.0.3

Bug Fixes:
* Misc advancement typos
* Remove duplicate Lost Cities advancement when playing in the Lost Cities world type (#466)
* Prevent sorting in Industrial Foregoing Laser Drill's inventory to stop ores from being deleted (#555)
* Disable fancy rain & snow for performance & fixes some particle issues such as the watering can
* Fix Magma Slime Dirt prestige not unlocking the Magma Slime Dirt
* Quantum Ring can now be crafted (#328)

Enhancements:
* Add localization support to advancements. Currently just en_US; Additional language support PR's are welcome!
* Changed BDS&M void upgrade recipe to use Obsidian instead of Void Stone
* Added pink and blue slime seeds (#546)
* Notify players playing prestige of how it works when first joining a world with Prestige enabled.
* Change nether cake icon to match the cake you should be crafting to help make it more clear which nether cake is the right one to craft
* Hopefully clarify that the AE Controller is not needed to use AE (and does not exist in the pack for a reason)
* Energy P2P Tunnels can now be crafted. Convert between the various types by right clicking with an item that carries or stores the relevant type.
* Added Hardened Glass recipes to NuclearCraft's Infuser and Alloy Furnace machines
* Where water bottles are used in crafting recipes, an empty bottle is now given back (#617)

Mod Updates:
* Apotheosis (1.9.2 -> 1.9.3)
* Barrels Drums Storage & More (0.0.21 -> 0.0.22)
* ComPatchedStorage (1.4.0 -> 1.5.1)
* Cyclic (1.19.5 -> 1.19.6)
* Elevator Mod (1.3.8 -> 1.3.9)
* FastWorkbench (1.6.1 -> 1.7.0)