@@ -24,6 +24,7 @@ Enhancements:
 * Removed Cyclic's Glowing Chrous recipe
 * Add melting recipes for pink slime
 * Add chorus flower to the drops of the chorus fruit plant - making them obtainable in CompactSky (#750)
+* Altered a number of prestige values for progressional balance
 
 
 ---------------------------------------------------------------------
